modified file locations

--- a/frontend/src/styles/products_styles.css
+++ b/frontend/src/styles/products_styles.css
@@ -1,9 +1,11 @@
 .product-container {
   display: grid;
+  width: 80%;
   grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
   padding: 1rem;
   border-radius: 8px;
+  margin: 0 auto;
 
 }
 
