--- a/frontend/src/styles/header_styles.css
+++ b/frontend/src/styles/header_styles.css
@@ -9,6 +9,7 @@
   width: 100%;
   margin: 0 auto;
   border: 1px solid black;
+  border: 1px solid black;
 }
 
 
@@ -54,3 +55,4 @@
   flex-direction: column;
   min-width: 100vh
 }
+
