--- a/frontend/src/styles/header_styles.css
+++ b/frontend/src/styles/header_styles.css
@@ -30,7 +30,7 @@
   background-color: #fff;
   color: #333;
   width: 155px;
-  height: 40px;
+  height: 50px;
   font-size: 15px;
 }
 
@@ -62,3 +62,24 @@
   margin-right: 20px;
 }
 
+.flash-alert {
+  background-color: #ffe0e0;
+  color: #a33;
+  padding: 1rem;
+  margin: 1rem;
+  border: 1px solid #f5c2c2;
+  border-radius: 4px;
+  position: relative;
+  width: 450px;
+}
+
+.close-btn {
+  background: none;
+  border: none;
+  font-size: 1.2rem;
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  cursor: pointer;
+  color: #a33;
+}
