--- a/frontend/src/styles/product_details_styles.css
+++ b/frontend/src/styles/product_details_styles.css
@@ -1,54 +1,60 @@
 .product_details_container {
-  display: flex;
-  flex-direction:row;
   margin-top: 20px;
   margin-bottom: 30px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 20px;
+ 
 
-}
-
-.buy_sell_chat_section {
-  border: 1px solid black;
-  height: 200px;
-  width: 300px;
-  margin-left: 20px;
 }
 
 .chat_input {
   width: 200px;
-  height: 100px;
+ height: 100px;
   
 }
 
 .selected_product-detail {
-  border: 1px solid black;
+  border: none;
+  border-radius: 10px;
   width: 800px;
   margin-left: 30px;
+  box-shadow: 5px 5px 5px 5px;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-bottom: 10px;
 }
+
 
 .similar-photos-section {
   margin-top: 2rem;
   padding: 1rem;
+  
 }
 
 .similar-photos-grid {
-  border: 1px solid #ddd;
-  border-radius: 10px;
+  /* border: 1px solid #ddd; */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 1rem;
   padding: 10px;
   text-align: center;
   background-color: #fff;
   transition: transform 0.2s ease-in-out;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 18px;
 
-}
 
-.similar-photos-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 1rem;
 }
 
 .similar_imgs {
   width: 300px;
   height: 200px;
+  width: 100%; 
+  height: 180px; 
+  object-fit: cover;
+  border: none;
+  box-shadow: 1px 0px 1px rgba(0, 0, 0, 0.1);
+  margin-top: 0 auto;
 }
 
 .selected_product_img {
@@ -72,10 +78,47 @@
 
 .save-fav-button:hover {
   background-color: #e6e6e6;
+  
 }
 
 .fav-icon {
   width: 18px;
   height: 18px;
+  background-color: #fff;
 }
 
+.favicon-contact-seller {
+ display: flex;
+ flex-direction: row;
+ width: 100px;
+ text-indent: 50px;
+ margin-top: 10px;
+ margin-left: 250px;
+
+  
+}
+
+.btn-primary {
+  height: 45px;
+  background-color: lightskyblue;
+  border: none;
+  border-radius: 2px;
+  font-size: 15px;
+  box-shadow: 3px;
+  
+}
+
+.main_container {
+  margin: 0 auto;
+  border: 1px solid ghostwhite;
+  margin-top: 30px;
+  padding-top: 20px;
+  width: 90%;
+}
+
+
+.products_info {
+   padding: 1rem;
+   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   font-size: 18px;
+}
