fixed admin delete backend

--- a/frontend/src/styles/header_styles.css
+++ b/frontend/src/styles/header_styles.css
@@ -1,4 +1,4 @@
-.header_layout {
+/* .header_layout {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -72,4 +72,4 @@
 
 .search_button:hover {
   background-color: #0056b3;
-}
+} */
